# wayparted

./: Makefile.am  README  configure.ac  gparted.in  org.gnome.gparted.policy.in.in  org.gnome.wayparted.policy.in.in  wayparted.appdata.xml.in  wayparted.desktop.in.in  wayparted.in
data/icons/: Makefile.am
doc/: Makefile.am
po/: ChangeLog  POTFILES.in  POTFILES.skip  ar.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  (+30 more)
src/: Dialog_Progress.cc  FileSystem.cc  Makefile.am  Win_GParted.cc  main.cc
tests/: Makefile.am  common.cc  common.h  makedev.sh  test_BlockSpecial.cc  test_EraseFileSystemSignatures.cc  test_SupportedFileSystems.cc
